libnanousd/nanousd-array.h

typedef struct nusd_bool_array_s* nusd_bool_array_t;
typedef struct nusd_float_array_s* nusd_float_array_t;
typedef struct nusd_float2_array_s* nusd_float2_array_t;
typedef struct nusd_float3_array_s* nusd_float3_array_t;
typedef struct nusd_float4_array_s* nusd_float4_array_t;
typedef struct nusd_double_array_s* nusd_double_array_t;
typedef struct nusd_double2_array_s* nusd_double2_array_t;
typedef struct nusd_double3_array_s* nusd_double3_array_t;
typedef struct nusd_double4_array_s* nusd_double4_array_t;
typedef struct nusd_int_array_s* nusd_int_array_t;
typedef struct nusd_int2_array_s* nusd_int2_array_t;
typedef struct nusd_int3_array_s* nusd_int3_array_t;
typedef struct nusd_int4_array_s* nusd_int4_array_t;
typedef struct nusd_int64_array_s* nusd_int64_array_t;
typedef struct nusd_matrix2d_array_s* nusd_matrix2d_array_t;
typedef struct nusd_matrix3d_array_s* nusd_matrix3d_array_t;
typedef struct nusd_matrix4d_array_s* nusd_matrix4d_array_t;
typedef struct nusd_uint_array_s* nusd_uint_array_t;
typedef struct nusd_uint64_array_s* nusd_uint64_array_t;
typedef struct nusd_uchar_array_s* nusd_uchar_array_t;
/// Returns the number of elements in a bool array.
///
/// @param bool_array Valid bool array handle.
///
/// @return Number of elements in the array
///
/// @note bool_array must not be null.
NANOUSD_API
size_t nusd_bool_array_size(nusd_bool_array_t bool_array);
/// Returns a pointer to the raw data of a bool array.
///
/// @param bool_array Valid bool array handle.
///
/// @return Pointer to the bool data
///
/// @note bool_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data can be safely accessed up to nusd_bool_array_size() elements.
NANOUSD_API
bool* nusd_bool_array_data(nusd_bool_array_t bool_array);
/// Destroys a bool array and releases associated resources.
///
/// @param bool_array Valid bool array handle to destroy. Can be null (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_bool_array_destroy(nusd_bool_array_t bool_array);
/// Returns the number of elements in a float array.
///
/// @param float_array Valid float array handle.
///
/// @return Number of elements in the array
///
/// @note float_array must not be null.
NANOUSD_API
size_t nusd_float_array_size(nusd_float_array_t float_array);
/// Returns a pointer to the raw data of a float array.
///
/// @param float_array Valid float array handle.
///
/// @return Pointer to the float data
///
/// @note float_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data can be safely accessed up to nusd_float_array_size()
/// elements.
NANOUSD_API
float* nusd_float_array_data(nusd_float_array_t float_array);
/// Destroys a float array and releases associated resources.
///
/// @param float_array Valid float array handle to destroy. Can be null (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_float_array_destroy(nusd_float_array_t float_array);
/// Returns the number of float2 elements in a float2 array.
///
/// @param float2_array Valid float2 array handle.
///
/// @return Number of float2 elements in the array
///
/// @note float2_array must not be null.
NANOUSD_API
size_t nusd_float2_array_size(nusd_float2_array_t float2_array);
/// Returns a pointer to the raw data of a float2 array.
///
/// @param float2_array Valid float2 array handle.
///
/// @return Pointer to the float data (interleaved as x,y,x,y,...)
///
/// @note float2_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data contains nusd_float2_array_size() * 2 float values.
NANOUSD_API
float* nusd_float2_array_data(nusd_float2_array_t float2_array);
/// Destroys a float2 array and releases associated resources.
///
/// @param float2_array Valid float2 array handle to destroy. Can be null
/// (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_float2_array_destroy(nusd_float2_array_t float2_array);
/// Returns the number of float3 elements in a float3 array.
///
/// @param float3_array Valid float3 array handle.
///
/// @return Number of float3 elements in the array
///
/// @note float3_array must not be null.
NANOUSD_API
size_t nusd_float3_array_size(nusd_float3_array_t float3_array);
/// Returns a pointer to the raw data of a float3 array.
///
/// @param float3_array Valid float3 array handle.
///
/// @return Pointer to the float data (interleaved as x,y,z,x,y,z,...)
///
/// @note float3_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data contains nusd_float3_array_size() * 3 float values.
NANOUSD_API
float* nusd_float3_array_data(nusd_float3_array_t float3_array);
/// Destroys a float3 array and releases associated resources.
///
/// @param float3_array Valid float3 array handle to destroy. Can be null
/// (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_float3_array_destroy(nusd_float3_array_t float3_array);
/// Returns the number of float4 elements in a float4 array.
///
/// @param float4_array Valid float4 array handle.
///
/// @return Number of float4 elements in the array
///
/// @note float4_array must not be null.
NANOUSD_API
size_t nusd_float4_array_size(nusd_float4_array_t float4_array);
/// Returns a pointer to the raw data of a float4 array.
///
/// @param float4_array Valid float4 array handle.
///
/// @return Pointer to the float data (interleaved as x,y,z,w,x,y,z,w,...)
///
/// @note float4_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data contains nusd_float4_array_size() * 4 float values.
NANOUSD_API
float* nusd_float4_array_data(nusd_float4_array_t float4_array);
/// Destroys a float4 array and releases associated resources.
///
/// @param float4_array Valid float4 array handle to destroy. Can be null
/// (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_float4_array_destroy(nusd_float4_array_t float4_array);
/// Returns the number of elements in a double array.
///
/// @param double_array Valid double array handle.
///
/// @return Number of elements in the array
///
/// @note double_array must not be null.
NANOUSD_API
size_t nusd_double_array_size(nusd_double_array_t double_array);
/// Returns a pointer to the raw data of a double array.
///
/// @param double_array Valid double array handle.
///
/// @return Pointer to the double data
///
/// @note double_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data can be safely accessed up to nusd_double_array_size()
/// elements.
NANOUSD_API
double* nusd_double_array_data(nusd_double_array_t double_array);
/// Destroys a double array and releases associated resources.
///
/// @param double_array Valid double array handle to destroy. Can be null
/// (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_double_array_destroy(nusd_double_array_t double_array);
/// Returns the number of double2 elements in a double2 array.
///
/// @param double2_array Valid double2 array handle.
///
/// @return Number of double2 elements in the array
///
/// @note double2_array must not be null.
NANOUSD_API
size_t nusd_double2_array_size(nusd_double2_array_t double2_array);
/// Returns a pointer to the raw data of a double2 array.
///
/// @param double2_array Valid double2 array handle.
///
/// @return Pointer to the double data (interleaved as x,y,x,y,...)
///
/// @note double2_array must not be null.
/// @note The returned pointer is valid until the array is destroyed.
/// @note The data contains nusd_double2_array_size() * 2 double values.
NANOUSD_API
double* nusd_double2_array_data(nusd_double2_array_t double2_array);
/// Destroys a double2 array and releases associated resources.
///
/// @param double2_array Valid double2 array handle to destroy. Can be null
/// (no-op).
///
/// @note After calling this function, the array handle becomes invalid and must
/// not be used.
/// @note It is safe to call this function with a null array handle.
NANOUSD_API
void nusd_double2_array_destroy(nusd_double2_array_t double2_array);
/// Returns the number of double3 elements in a double3 array.
///
/// @param double3_array Valid double3 array handle.
///
/// @return Number of double3 elements in the array
///
/// @note double3_array must not be null.
NANOUSD_API
size_t nusd_double3_array_size(nusd_double3_array_t double3_array);