nanousd-iterators.h

typedef struct nusd_asset_path_array_iterator_s* nusd_asset_path_array_iterator_t;
/// Returns the total number of asset_paths in a asset_path array iterator.
/// 
/// @param iterator Valid asset_path array iterator handle.
/// 
/// @return Number of asset_paths in the iterator.
/// 
/// @note iterator must not be null.
/// @note This function returns the total size regardless of the current iteration position.
NANOUSD_API
size_t nusd_asset_path_array_iterator_size(nusd_asset_path_array_iterator_t iterator);
/// Destroys a asset_path array iterator and releases associated resources.
/// 
/// @param asset_paths Valid asset_path array iterator handle to destroy. Can be null (no-op).
/// 
/// @return NUSD_RESULT_OK on success
/// 
/// @note This function always returns NUSD_RESULT_OK.
/// @note After calling this function, the iterator handle becomes invalid and must not be used.
/// @note It is safe to call this function with a null iterator handle.
NANOUSD_API
nusd_result_t nusd_asset_path_array_iterator_destroy(nusd_asset_path_array_iterator_t asset_paths);